start a db wraper

--- a/src/Makefile
+++ b/src/Makefile
@@ -118,7 +118,8 @@ REDIS_SERVER_OBJ=vvcp.o vvi.o vv.o adlist.o ae.o anet.o dict.o redis.o sds.o zma
 	antlr3tokenstream.o antlr3treeparser.o \
 	vvformula.o \
 	VVEval.o  VVEvalInit.o  VVExprLexer.o  VVExprParser.o \
-	hashtable.o
+	hashtable.o \
+	vvdb.o
 	
 REDIS_CLI_NAME=redis-cli
 REDIS_CLI_OBJ=anet.o sds.o adlist.o redis-cli.o zmalloc.o release.o anet.o ae.o crc64.o
